# wizards_war

./: CMakeLists.txt  client  client.cpp
serverSide/: server.cpp
serverSide/gameCode/: game  game.cpp  wizardsWar.cpp  wizardsWar.h
serverSide/gameCode/support/: card.cpp  card.h  deck.cpp  deck.h  player.cpp  player.h  wizardsWar.cpp  wizardsWar.h
